--- a/_includes/pages/home/where.html
+++ b/_includes/pages/home/where.html
@@ -2,7 +2,7 @@
     <div class="content">
         <h3>Hello</h3>
 
-        <form id="contact_form" action="//formspree.io/emarref@gmail.com" method="POST" class="col-md-4 col-md-offset-4">
+        <form id="contact_form" action="https://formspree.io/emarref@gmail.com" method="POST" class="col-md-4 col-md-offset-4">
             <div class="form-group">
                 <input type="text" class="form-control" id="contact_name" name="name" placeholder="Name" required/>
             </div>
