--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -18,7 +18,7 @@
             <div class="collapse navbar-collapse">
                 <p class="navbar-text navbar-right">
                     <a href="https://calendly.com/emarref/coffee" target="_blank" class="navbar-link">Let&rsquo;s chat soon</a>
-                    <img class="avatar img-circle img-thumbnail" src="http://www.gravatar.com/avatar/0d49c8ee20beed1096a4ca3a1bc08acf"/>
+                    <img class="avatar img-circle img-thumbnail" src="https://www.gravatar.com/avatar/0d49c8ee20beed1096a4ca3a1bc08acf"/>
                 </p>
                 <ul class="nav navbar-nav">
                     <li><a href="/#about">About</a></li>
