--- a/_sass/includes/_fonts.scss
+++ b/_sass/includes/_fonts.scss
@@ -1,4 +1,4 @@
-@import url(http://fonts.googleapis.com/css?family=Lato:100,300,700,300italic,700italic);
+@import url(https://fonts.googleapis.com/css?family=Lato:100,300,700,300italic,700italic);
 
 body {
     font-weight: 100;
