--- a/src/views/index.pug
+++ b/src/views/index.pug
@@ -2,6 +2,7 @@ doctype html
 html(lang="en")
     head
         meta(charset="utf-8")
+        meta(content="IE=edge", http-equiv=X-UA-Compatible)
         meta(name="viewport", content="width=device-width, initial-scale=1, shrink-to-fit=no")
         title Emarref
         link(rel="stylesheet", type="text/css", href="/css/style.css")
