--- a/src/style/_typography.scss
+++ b/src/style/_typography.scss
@@ -4,10 +4,20 @@ body {
   color: white;
   font-family: Lato, sans-serif;
   font-size: 1rem;
-  font-weight: 100;
   line-height: 1.5em;
+  font-weight: normal;
 }
 
 h1, h2, h3, h4, h5, h6 {
-  font-weight: 100;
+  font-weight: normal;
+}
+
+@media (min-width: 576px) {
+  body {
+    font-weight: 100;    
+  }
+
+  h1, h2, h3, h4, h5, h6 {
+    font-weight: 100;
+  }
 }
