--- a/src/views/_information.pug
+++ b/src/views/_information.pug
@@ -1,6 +1,6 @@
 h1 Malcolm Fell
 h2 Freelance Full-Stack Web-Application Engineer
-p  Symfony, Linux, LEMP, ElasticSearch, Redis, MariaDB, Go
+p  Symfony, PHP, Linux, Nginx, Apache, MariaDB, MySQL, Redis, ElasticSearch, Go
 ul.portfolio
     li: a(href="https://vendhq.com/", title="Vend", target="_blank"): img(src="/images/vend.png", alt="Vend")
     li: a(href="http://figured.com/", title="Figured", target="_blank"): img(src="/images/figured.png", alt="Figured")
