--- a/src/style/_content.scss
+++ b/src/style/_content.scss
@@ -67,7 +67,7 @@ body {
 .portfolio {
     list-style: none;
     display: flex;
-    justify-content: space-around;
+    justify-content: space-between;
     align-content: center;
     align-items: center;
     padding: 0;
