--- a/src/views/_information.pug
+++ b/src/views/_information.pug
@@ -2,8 +2,9 @@ h1 Malcolm Fell
 h2 Freelance Full-Stack Web-Application Engineer
 p  Symfony, PHP, Linux, Nginx, Apache, MariaDB, MySQL, Redis, ElasticSearch, Go
 ul.portfolio
-    li: a(href="https://vendhq.com/", title="Vend", target="_blank"): img(src="/images/vend.png", alt="Vend")
-    li: a(href="http://figured.com/", title="Figured", target="_blank"): img(src="/images/figured.png", alt="Figured")
+    li: a(href="https://www.asknicely.com/", title="Ask Nicely", target="_blank"): img(src="/images/asknicely.png", alt="Ask Nicely")
     li: a(href="https://weirdlyhub.com/", title="Weirdly", target="_blank"): img(src="/images/weirdly.png", alt="Weirdly")
+    li: a(href="http://figured.com/", title="Figured", target="_blank"): img(src="/images/figured.png", alt="Figured")
+    li: a(href="https://vendhq.com/", title="Vend", target="_blank"): img(src="/images/vend.png", alt="Vend")
     li: a(href="https://curate.co.nz/", title="Curate", target="_blank"): img(src="/images/curate.png", alt="Curate")
 p: button.contact Contact Me
