Add k8s and docker

--- a/src/views/_information.pug
+++ b/src/views/_information.pug
@@ -1,6 +1,6 @@
 h1 Malcolm Fell
 h2 Full-Stack Product Developer
-p  Symfony, PHP, Linux, Nginx, Apache, MariaDB, MySQL, Redis, ElasticSearch, Go
+p  Symfony, PHP, Linux, Nginx, Apache, MariaDB, MySQL, Redis, ElasticSearch, Go, Kubernetes, Docker
 ul.portfolio
     li: a(href="https://weirdlyhub.com/", title="Weirdly", target="_blank"): img(src="/images/weirdly.png", alt="Weirdly")
     li: a(href="https://asknicely.com/", title="Ask Nicely", target="_blank"): img(src="/images/asknicely.png", alt="Ask Nicely")
