--- a/src/views/index.pug
+++ b/src/views/index.pug
@@ -5,6 +5,7 @@ html(lang="en")
         meta(content="IE=edge", http-equiv="X-UA-Compatible")
         meta(name="viewport", content="width=device-width, initial-scale=1, shrink-to-fit=no")
         title Emarref
+        script(src="https://browser.sentry-cdn.com/5.17.0/bundle.min.js", integrity="sha384-lowBFC6YTkvMIWPORr7+TERnCkZdo5ab00oH5NkFLeQUAmBTLGwJpFjF6djuxJ/5", crossorigin="anonymous")
         link(rel="stylesheet", type="text/css", href="/css/style.css")
         link(rel="stylesheet", type="text/css", href="https://cdnjs.cloudflare.com/ajax/libs/toastr.js/2.1.3/toastr.min.css")
     body
