--- a/src/views/_contact.pug
+++ b/src/views/_contact.pug
@@ -16,4 +16,4 @@ form#contact_form(action="https://formspree.io/f/xeqpdzzo" method="POST")
     .form-group.actions
         button(type="submit") Contact Me
     input(type="hidden" name="_subject" value="Contact on Emarref")
-    //- input(type="text" name="_gotcha" style="display:none;", value="Nope")
+    input(type="text" name="_gotcha" style="display:none;", value="Nope")
