--- a/src/views/_contact.pug
+++ b/src/views/_contact.pug
@@ -1,4 +1,4 @@
-form#contact_form(action="https://formspree.io/f/xeqpdzzo" method="POST")
+form#contact_form(action="https://form.taxi/s/alf8l4gf" method="POST")
     h3 #[a.cancel(href="#") &times;] Contact Me
     p Drop me a line by completing the form below.
     .form-group
