--- a/src/views/_information.pug
+++ b/src/views/_information.pug
@@ -2,6 +2,7 @@ h1 Malcolm Fell
 h2 Full-Stack Product Developer
 p  Symfony, PHP, Linux, Nginx, Apache, MariaDB, MySQL, Redis, ElasticSearch, Go, Kubernetes, Docker
 ul.portfolio
+    li: a(href="https://halterhq.com/", title="Halter", target="_blank"): img(src="/images/halter.png", alt="Halter")
     li: a(href="https://getweirdly.com/", title="Weirdly", target="_blank"): img(src="/images/weirdly.png", alt="Weirdly")
     li: a(href="https://asknicely.com/", title="Ask Nicely", target="_blank"): img(src="/images/asknicely.png", alt="Ask Nicely")
     li: a(href="https://figured.com/", title="Figured", target="_blank"): img(src="/images/figured.png", alt="Figured")
