--- a/src/views/index.pug
+++ b/src/views/index.pug
@@ -4,6 +4,7 @@ html(lang="en")
         meta(charset="utf-8")
         meta(content="IE=edge", http-equiv="X-UA-Compatible")
         meta(name="viewport", content="width=device-width, initial-scale=1, shrink-to-fit=no")
+        meta(name="referrer", content="no-referrer")
         title Emarref
         script(src="https://browser.sentry-cdn.com/6.2.1/bundle.min.js", integrity="sha384-VXBbKp5OEiVPansWgHB3LwMPIIE2KgmeyEg0N9kG6WPgGxoEdrlnpq6mlEsKLW0B", crossorigin="anonymous")
         link(rel="stylesheet", type="text/css", href="/css/style.css")
