--- a/src/views/_social.pug
+++ b/src/views/_social.pug
@@ -2,3 +2,4 @@ img#avatar(src="/images/emarref.jpeg" alt="Malcolm Fell")
 ul.links
     li: a(href="https://github.com/emarref", target="_blank"): img(src="/images/github.png", alt="GitHub")
     li: a(href="https://twitter.com/emarref", target="_blank"): img(src="/images/twitter.png", alt="Twitter")
+    li: a(href="https://www.linkedin.com/in/emarref/", target="_blank"): img(src="/images/linkedin.png", alt="LinkedIn")
