--- a/src/views/_contact.pug
+++ b/src/views/_contact.pug
@@ -1,4 +1,4 @@
-form#contact_form(action="https://getform.io/f/564c543c-fae6-4838-9d93-6413e61cdb8d" method="POST")
+form#contact_form(action="https://form.taxi/s/alf8l4gf" method="POST")
     h3 #[a.cancel(href="#") &times;] Contact Me
     p Drop me a line by completing the form below.
     .form-group
@@ -15,3 +15,5 @@ form#contact_form(action="https://getform.io/f/564c543c-fae6-4838-9d93-6413e61cd
         textarea#contact_message(name="message", placeholder="Message")
     .form-group.actions
         button(type="submit") Contact Me
+    input(type="hidden" name="_subject" value="Contact on Emarref")
+    input(type="text" name="_gotcha" style="display:none;")
