Add mastodon self link

--- a/src/views/_social.pug
+++ b/src/views/_social.pug
@@ -3,3 +3,4 @@ ul.links
     li: a(href="https://github.com/emarref", target="_blank"): img(src="/images/github.png", alt="GitHub")
     li: a(href="https://twitter.com/emarref", target="_blank"): img(src="/images/twitter.png", alt="Twitter")
     li: a(href="https://www.linkedin.com/in/emarref/", target="_blank"): img(src="/images/linkedin.png", alt="LinkedIn")
+    li: a(href="https://mastodon.social/@emarref", rel="me," target="_blank"): img(src="/images/mastodon.png", alt="Mastodon")
