Change profile photo

--- a/src/views/_social.pug
+++ b/src/views/_social.pug
@@ -1,4 +1,4 @@
-img#avatar(src="/images/emarref.jpeg" alt="Malcolm Fell")
+img#avatar(src="/images/profile.jpg" alt="Malcolm Fell")
 ul.links
     li: a(href="https://github.com/emarref", target="_blank"): img(src="/images/github.png", alt="GitHub")
     li: a(href="https://twitter.com/emarref", target="_blank"): img(src="/images/twitter.png", alt="Twitter")
